--- a/src/WpfTerminalControlLib/Themes/Generic.xaml
+++ b/src/WpfTerminalControlLib/Themes/Generic.xaml
@@ -2,12 +2,13 @@
   xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
   xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
   xmlns:local="clr-namespace:WpfCustomControlLibrary1"
-  xmlns:terminal1="clr-namespace:Terminal1">
+  xmlns:terminal1="clr-namespace:Terminal1"
+  xmlns:wpfTerminalControlLib="clr-namespace:WpfTerminalControlLib">
 
-  <Style TargetType="{x:Type terminal1:WpfTerminalControl}">
+  <Style TargetType="{x:Type wpfTerminalControlLib:WpfTerminalControl}">
     <Setter Property="Template">
       <Setter.Value>
-        <ControlTemplate TargetType="{x:Type terminal1:WpfTerminalControl}">
+        <ControlTemplate TargetType="{x:Type wpfTerminalControlLib:WpfTerminalControl}">
           <ControlTemplate.Resources>
             <BooleanToVisibilityConverter x:Key="B" />
           </ControlTemplate.Resources>
