--- a/src/Test/WpfTestApp/MainWindow.xaml
+++ b/src/Test/WpfTestApp/MainWindow.xaml
@@ -587,7 +587,7 @@
         <TextBlock Text="{Binding CharUnderCursor}" />
       </StackPanel>
     </StackPanel>
-    <wpfTerminalControlLib:WpfTerminalControl FontSize="20" DiagnosticsEnabled="True" ForegroundColor="Green"
+    <wpfTerminalControlLib:WpfTerminalControl NumReservedColumns="0" FontSize="20" DiagnosticsEnabled="True" ForegroundColor="Green"
                                               Background="Black" FontWeight="Bold"
                                               BackgroundColor="Black" AutoResize="True" Grid.Row="2"
                                               CursorBrush="DarkOrange"
