--- a/src/Test/WpfTestApp/App.xaml
+++ b/src/Test/WpfTestApp/App.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:WpfApp4"
-             StartupUri="MainWindow.xaml">
+             StartupUri="ConsoleWindow.xaml">
     <Application.Resources>
          
     </Application.Resources>
