--- a/src/WpfTerminalControlLib/Themes/Generic.xaml
+++ b/src/WpfTerminalControlLib/Themes/Generic.xaml
@@ -31,7 +31,7 @@
                 <VisualState Name="Unfocused" />
               </VisualStateGroup>
             </VisualStateManager.VisualStateGroups>
-            <Grid HorizontalAlignment="Stretch" VerticalAlignment="Top" x:Name="Grid1">
+            <Grid HorizontalAlignment="Stretch" VerticalAlignment="Stretch" x:Name="Grid1">
               <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*" />
                 <ColumnDefinition Width="Auto"/>
@@ -50,7 +50,7 @@
                     <ColumnDefinition Width="Auto" />
                   </Grid.ColumnDefinitions>
 
-                  <Rectangle Grid.Row="0" x:Name="ColLabel" HorizontalAlignment="Stretch" Height="40" Stroke="Aqua" StrokeThickness="1">
+                  <Rectangle Visibility="Collapsed" Grid.Row="0" x:Name="ColLabel" HorizontalAlignment="Stretch" Height="40" Stroke="Aqua" StrokeThickness="1">
                       <Rectangle.Fill>
                       <DrawingBrush AlignmentX="Left" AlignmentY="Bottom"
                                     Stretch="Fill"
@@ -63,7 +63,7 @@
                     </Rectangle.Fill>
 
                   </Rectangle>
-                  <Rectangle Grid.Row="1" x:Name="ColLabel2" HorizontalAlignment="Stretch" Height="20">
+                  <Rectangle Grid.Row="1" Visibility="Collapsed" x:Name="ColLabel2" HorizontalAlignment="Stretch" Height="20">
                     <Rectangle.Fill>
                       <DrawingBrush x:Name="ColLabel2DrawingBrush" AlignmentX="Left" AlignmentY="Bottom"
                                     Stretch="Fill"
